--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spinners": "^0.14.1",
     "sonner": "^1.7.0",
     "tailwindcss": "^3.4.15"
   },
