--- a/bixdata_frontend_react/package.json
+++ b/bixdata_frontend_react/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.15.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
