--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.14.1",
-    "sonner": "^1.7.0",
-    "tailwindcss": "^3.4.15"
+    "sonner": "^1.7.1",
+    "tailwindcss": "^3.4.15",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6"
