--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "next": "^15.0.3",
@@ -11,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-spinners": "^0.14.1",
     "sonner": "^1.7.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.15",
     "zustand": "^5.0.2"
   },
