--- a/bixdata_frontend_react/package.json
+++ b/bixdata_frontend_react/package.json
@@ -18,6 +18,7 @@
     "next": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-spinners": "^0.15.0",
     "sonner": "^1.7.1",
     "zustand": "^5.0.2"
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
