--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-spinners": "^0.14.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
