--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
+    "react-select": "^5.9.0",
     "react-spinners": "^0.14.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
@@ -21,6 +22,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6"
+    "@types/js-cookie": "^3.0.6",
+    "@types/react-select": "^5.0.1"
   }
 }
