--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
+    "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "react-spinners": "^0.14.1",
     "sonner": "^1.7.1",
@@ -24,5 +25,9 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/react-select": "^5.0.1"
-  }
+  },
+  "resolutions": {
+  "@types/react": "18.3.1",
+  "@types/react-dom": "18.3.1"
+}
 }
