--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@shadcn/ui": "^0.0.4",
+    "@types/react-select": "^5.0.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
-    "next": "^15.0.3",
+    "next": "^15.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.1",
-    "react-select": "^5.9.0",
     "react-spinners": "^0.14.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
@@ -24,10 +25,11 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/react-select": "^5.0.1"
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15"
   },
   "resolutions": {
-  "@types/react": "18.3.1",
-  "@types/react-dom": "18.3.1"
-}
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1"
+  }
 }
