--- a/bixdata_frontend_react/package.json
+++ b/bixdata_frontend_react/package.json
@@ -11,23 +11,25 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tailwindcss/postcss": "^4.0.0",
     "axios": "^1.7.9",
     "bixdata_frontend_react": "file:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
-    "next": "^15.1.3",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
     "react-spinners": "^0.15.0",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
@@ -36,7 +38,6 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
