--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.10.0",
     "react-spinners": "^0.14.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
