--- a/bixdata_frontend_react/package.json
+++ b/bixdata_frontend_react/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
+    "react-select": "^5.10.0",
     "react-spinners": "^0.15.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
