--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "^15.1.4",
     "react": "^18.3.1",
