--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@shadcn/ui": "^0.0.4",
     "@types/react-select": "^5.0.1",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.0",
     "react-spinners": "^0.14.1",
